client/public/assets/css/common.css
/* ... */
._layout {
    height: 100vh;
    display: flex;
    flex-direction: column;
}

._layout_100 {
    height: 100;
}

.form-control:focus {
    box-shadow: none;
}

._text_center {
    text-align: center;
}

._text_right {
    text-align: right;
}

._text_left {
    text-align: left;
}


/*TITLE*/

._title1 {
    font-weight: 700;
    font-size: 45px;
    line-height: 56px;
}

._title2 {
    font-weight: 700;
    font-size: 36px;
    line-height: 46px;
}

._title3 {
    font-weight: 500;
    font-size: 26px;
    line-height: 34px;
}

._title4 {
    font-weight: 500;
    font-size: 16px;
    line-height: 1.2;
    color: var(--color2);
}

._title5 {
    font-weight: 500;
    font-size: 20px;
    line-height: 1.4;
    color: var(--color6);
    margin:0;
}


/*input*/

._inpt1 {
    background: var(--bg3);
    border: 1px solid var(--bg3);
    border-radius: 32px;
    width: 424px;
    height: 40px;
    padding: 7px 47px;
    transition:.2s all ease;
}
._inpt1:hover {
    border:1px solid var(--color5);
}

/*INPUT PLACEHOLDER*/

._inpt1::placeholder {
    font-family: Poppins;
    font-weight: normal;
    font-size: 16px;
    line-height: 1.4;
    color: rgba(0, 0, 0, 0.25);
}



/*INPUT PLACEHOLDER*/


/*INPUT FOCUS*/

._inpt1:focus::placeholder {
    transition: .2s all ease;
    opacity: 0;
}


/*INPUT FOCUS*/


/*Button*/

._btn1 {
    padding: 12px 116px;
    background: var(--color5);
    border: 1px solid transparent;
    border-radius: 6px;
    font-weight: 500;
    font-size: 16px;
    color: #fff;
}

._btn1:hover {
    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
}

._btn2 {
    height: 50px;
    font-size: 16px;
    line-height: 26px;
    border-radius: 6px;
    font-weight: 400;
}

._btn2:hover {}

._btn3 {
    height: 32px;
    font-size: 14px;
    line-height: 22.4px;
    border-radius: 6px;
    font-weight: 400;
}

._btn3:hover {}

._btn4 {
    height: 44px;
    font-size: 14px;
    line-height: 22.4px;
    border-radius: 6px;
    font-weight: 400;
    padding: 0px 20px;
}

._btn4:hover {}


/* Display */

._dis_flex {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}

._dis_flex_all {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}

._dis_flex_cntr1 {
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}

._dis_flex_cntr2 {
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}

._flex_row {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
}

._flex_space {
    -webkit-box-flex: 1;
    -ms-flex: 1 1;
    flex: 1 1;
}

._flex_auto {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
}

.d-none {
    display: none;
}

.d-block {
    display: block;
}


/* Text Overflow */

._1text_overflow {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

._2text_overflow {
    display: -webkit-box;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: normal;
    -webkit-line-clamp: 2;
}

._3text_overflow {
    display: -webkit-box;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: normal;
    -webkit-line-clamp: 3;
}

._4text_overflow {
    display: -webkit-box;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: normal;
    -webkit-line-clamp: 3;
}

._5text_overflow {
    display: -webkit-box;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: normal;
    -webkit-line-clamp: 3;
}

._text_overflow_height {
    display: -webkit-box;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: normal;
}

._overflow_hidden {
    overflow: hidden;
}


/*Box Shadow*/

._box_shdw1 {
    -webkit-box-shadow: var(--b-shadow1);
    box-shadow: var(--b-shadow1);
}

._box_shdw2 {
    -webkit-box-shadow: var(--b-shadow2);
    box-shadow: var(--b-shadow2);
}

._box_shdw3 {
    -webkit-box-shadow: var(--b-shadow3);
    box-shadow: var(--b-shadow3);
}


/* Border Radious*/

._b_radious1 {
    border-radius: 1px;
}

._b_radious2 {
    border-radius: 2px;
}

._b_radious3 {
    border-radius: 3px;
}

._b_radious4 {
    border-radius: 4px;
}

._b_radious5 {
    border-radius: 5px;
}

._b_radious6 {
    border-radius: 6px;
}

._b_radious7 {
    border-radius: 7px;
}

._b_radious8 {
    border-radius: 8px;
}

._b_radious9 {
    border-radius: 9px;
}

._b_radious10 {
    border-radius: 10px;
}

._b_radious10 {
    border-radius: 10px;
}

._b_radious11 {
    border-radius: 11px;
}

._b_radious12 {
    border-radius: 12px;
}

._b_radious13 {
    border-radius: 13px;
}

._b_radious14 {
    border-radius: 14px;
}

._b_radious15 {
    border-radius: 15px;
}

._b_radious16 {
    border-radius: 16px;
}

._b_radious17 {
    border-radius: 17px;
}

._b_radious18 {
    border-radius: 18px;
}

._b_radious19 {
    border-radius: 19px;
}

._b_radious20 {
    border-radius: 20px;
}

._b_radious30 {
    border-radius: 30px;
}

._b_radious50 {
    border-radius: 50px;
}

._b_radious100 {
    border-radius: 100%;
}


/* Margin Top */

._mar_t1 {
    margin-top: 1px;
}

._mar_t2 {
    margin-top: 2px;
}

._mar_t3 {
    margin-top: 3px;
}

._mar_t4 {
    margin-top: 4px;
}

._mar_t5 {
    margin-top: 5px;
}

._mar_t6 {
    margin-top: 6px;
}

._mar_t7 {
    margin-top: 7px;
}

._mar_t8 {
    margin-top: 8px;
}

._mar_t9 {
    margin-top: 9px;
}

._mar_t10 {
    margin-top: 10px;
}

._mar_t1 {
    margin-top: 1px;
}

._mar_t11 {
    margin-top: 11px;
}

._mar_t12 {
    margin-top: 12px;
}

._mar_t13 {
    margin-top: 13px;
}

._mar_t14 {
    margin-top: 14px;
}

._mar_t15 {
    margin-top: 15px;
}
/* ... */

